[project]
name = "computer-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiortc[gstreamer]>=1.13.0",
    "mss>=10.0.0",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.2.1",
    "pycryptodome>=3.23.0",
    "pynput>=1.8.1",
]
